# pip-shims

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Pipfile  README.rst  appveyor.yml  azure-pipelines.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.azure-pipelines/templates/: build-package.yml  install-dependencies.yml  reinstall-pythons.yml  run-tests.yml
.github/workflows/: ci.yml  create_release.yml  pypi_upload.yml
docs/: Makefile  conf.py  index.rst  make.bat  pip_shims.backports.rst  pip_shims.compat.rst  pip_shims.environment.rst  pip_shims.models.rst  pip_shims.rst  pip_shims.shims.rst  pip_shims.utils.rst  quickstart.rst
docs/_autosummary/: _autosummary.rst  pip_shims.environment.rst  pip_shims.models.rst  pip_shims.rst  pip_shims.utils.rst
docs/_templates/autosummary/: module.rst
news/: 1.docs  10.feature.rst  13.bugfix.rst  15.bugfix.rst  16.bugfix.rst  17.feature.rst  19.feature.rst  2.bugfix  21.feature.rst  25.feature.rst  27.feature.rst  28.bugfix.rst  3.trivial  32.bugfix.rst  33.feature.rst  34.bugfix.rst  35.bugfix.rst  4.feature  42.bugfix.rst  46.bugfix.rst  47.bugfix.rst  49.feature.rst  5.bugfix  50.feature.rst  51.feature.rst  52.bugfix.rst  56.bugfix.rst  58.bugfix.rst  59.bugfix.rst  60.bugfix.rst  61.bugfix.rst  62.bugfix.rst  65.feature.rst  67.bugfix.rst  68.bugfix.rst  7.bugfix  77.feature.rst  77.removal.rst  80.bugfix.rst  81.feature.rst  (+3 more)
src/pip_shims/: __init__.py  backports.py  compat.py  environment.py  models.py  shims.py  utils.py
tasks/: __init__.py
tests/: __init__.py  conftest.py  test_instances.py
