[metadata]
name = pip_shims
description = Compatibility shims for pip versions 8 thru current.
url = https://github.com/sarugaku/pip-shims
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
license = ISC License
keywords =
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = true
python_requires = >=2.6,!=3.0,!=3.1,!=3.2,!=3.3
setup_requires = setuptools>=36.2.2
install_requires =
    modutil; python_version>="3.7"
    importlib; python_version<"2.7"

[options.extras_require]
test = pytest

[bdist_wheel]
universal = 1

[tool:pytest]
strict = true
addopts = -ra
testpaths = tests/
norecursedirs = .* build dist news tasks docs

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
not_skip=__init__.py
ignore_trailing_comma=true

[flake8]
exclude = .git,__pycache__,docs/,*.egg,build,data
select = E,W,F
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    E127,E128,E129,E222,E231,E402,E501
