[metadata]
name = pip_shims
package_name = pip-shims
description = Compatibility shims for pip versions 8 thru current.
url = https://github.com/sarugaku/pip-shims
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
license = ISC License
keywords =
    pip
    compatibility
    shims
    api
    pip-shims
    pipenv
    pip-compat
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = true
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4
setup_requires =
    contextlib2;python_version<="2.7"
    importlib;python_version<"2.7"
    packaging
    setuptools>=40.8.0
    wheel
    backports.tempfile;python_version<"3.5"
install_requires =
    backports.tempfile;python_version<"3.5"
    contextlib2;python_version<="2.7"
    importlib;python_version<"2.7"
    funcsigs;python_version<="2.7"
    pip
    packaging
    setuptools
    six
    wheel

[options.extras_require]
tests =
    pytest-timeout
    pytest
    pytest-xdist
    pytest-cov
    twine
    readme-renderer[md]
dev =
    pre-commit
    mypy;python_version>="3.5"
    isort
    flake8
    flake8-bugbear;python_version>="3.5"
    rope
    black;python_version>="3.6"
    invoke
    parver
    towncrier
    wheel

[bdist_wheel]
universal = 1

[tool:pytest]
strict = true
plugins = cov flake8
addopts = -ra
testpaths = tests/
norecursedirs = .* build dist news tasks docs
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[isort]
atomic = true
not_skip = __init__.py
line_length = 90
indent = '    '
multi_line_output = 3
known_third_party =invoke,packaging,parver,pytest,setuptools,six,towncrier
known_first_party = pip_shims,tests
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
# select = E,W,F
ignore =
    # The default ignore list:
    # E121,E123,E126,E226,E24,E704,
    D203,F401,E123,E203,W503,E501
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # E231,E402,E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity=13

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=2.7
