[metadata]
name = pip_shims
package_name = pip-shims
description = Compatibility shims for pip versions 8 thru current.
url = https://github.com/sarugaku/pip-shims
author = Dan Ryan
author_email = dan@danryan.co
maintainer = Frost Ming
maintainer_email = mianghong@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    pip
    compatibility
    shims
    api
    pip-shims
    pipenv
    pip-compat
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = true
python_requires = >=3.6
install_requires =
    pip>=20
    packaging
    setuptools
    wheel

[options.extras_require]
tests =
    pytest-timeout
    pytest
    pytest-xdist
    pytest-cov
    readme-renderer[md];python_version<"3.8"
docs =
    sphinx<2.0
    sphinx-rtd-theme
dev =
    pre-commit
    nox
    parver

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -ra
testpaths = tests/
norecursedirs = .* build dist news tasks docs
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[isort]
profile = black
atomic = true
line_length = 90
known_third_party =invoke,packaging,parver,pytest,setuptools,towncrier
known_first_party = pip_shims,tests

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
# select = E,W,F
ignore =
    # The default ignore list:
    # E121,E123,E126,E226,E24,E704,
    D203,F401,E123,E203,W503,E501
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # E231,E402,E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity=13

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=2.7
